// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SettingsItemLabel /> Tests should render correctly and match snapshot - required and optional props 1`] = `
<View
  style={
    [
      {
        "padding": 10,
      },
      undefined,
    ]
  }
>
  <Text
    style={
      [
        {
          "color": "#808080",
        },
        undefined,
      ]
    }
  >
    An item label
  </Text>
  <Text
    style={
      {
        "color": "#ccc",
      }
    }
  >
    An item description
  </Text>
</View>
`;

exports[`<SettingsItemLabel /> Tests should render correctly and match snapshot - required props 1`] = `
<View
  style={
    [
      {
        "padding": 10,
      },
      undefined,
    ]
  }
>
  <Text
    style={
      [
        {
          "color": "#808080",
        },
        undefined,
      ]
    }
  >
    An item label
  </Text>
</View>
`;
